# open-gm

./: .gitignore  .gm.yaml.example  DIRECTORY_STRUCTURE_DESIGN_ISSUE.md  DIRECTORY_STRUCTURE_FIX_PLAN.md  DOCUMENTATION_CLEANUP_PLAN.md  IMPLEMENTATION_CONFIG_VALIDATOR.md  IMPLEMENTATION_SUMMARY_TASK5.md  ISSUE_ANALYSIS_AND_FIXES.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.txt  README.md  SYMLINK_MANAGEMENT_IMPLEMENTATION.md  TASK14_TRANSACTION_MANAGEMENT_SUMMARY.md  TASK15_FINAL_COMPLETION_SUMMARY.md  examples_config_validator.py  gm.yaml.example  package-lock.json  package.json  pyproject.toml  pytest.ini  注意打印不能使用Emoji 字符
.sisyphus/drafts/: implementation_review.md  remove-git-directory.md
.sisyphus/plans/: consistency-check.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  INSTALLATION.md  QUICK_START.md  RELEASE.md  TROUBLESHOOTING.md  USER_MANUAL.md  core-implementation.md
docs/archive/: COMPLETION_REPORT_STATUS.md  PROJECT_VALIDATION_REPORT.md  VERIFICATION_REPORT_TASK5.md  VERIFICATION_SUMMARY.md
docs/implementation/: IMPLEMENTATION_SUMMARY_STATUS.md  IMPLEMENTATION_SUMMARY_TASK3.md  IMPLEMENTATION_TASK10_SUMMARY.md  TASK14_COMPLETION_VERIFICATION.md  TASK15_SYMLINK_VERIFICATION_REPORT.md  TASK18_COMPLETION_REPORT.md
examples/: advanced_workflow.sh  basic_workflow.sh
examples/config_examples/: advanced.yaml  branch_mapping.yaml  simple.yaml
examples/scripts/: backup_worktrees.sh  cleanup_stale.sh
gm/: __init__.py
gm/cli/: __init__.py  main.py
gm/core/: __init__.py  cache_manager.py  (+15 more)
(+38 files in other folders)
